--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chat_websocket",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jan-clod.github.io/chat_websocket/",
+  "homepage": "https://jan-clod.github.io/chat_websocket",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
