--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "chat",
+  "name": "chat_websocket",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "logo192.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
@@ -13,12 +13,12 @@
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "logo192.png",
       "type": "image/png",
       "sizes": "512x512"
     }
   ],
-  "start_url": ".",
+  "start_url": "/profile",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
